# Chatbot-Platform

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
backend/: main.py  requirements.txt
backend/api/: dependencies.py  router.py
backend/api/endpoints/: agent_api.py  auth.py  auth_api.py  project_api.py  session.py
backend/core/: config.py  constants.py  messages.py  openai_client.py  secrets.py  supabase_client.py
backend/core/interfaces/: __init__.py  base_llm_manager.py  base_memory_manager.py  base_summarizer_memory.py
backend/models/: auth.py  chat.py  project.py
backend/services/: auth_service.py  chatbot_service.py  project_service.py  session_manager.py
backend/services/llm/: openai_service.py  provider.py  summarizer.py
backend/services/memory/: summarization_memory.py
frontend/: .env.example  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/api/: client.js
frontend/src/components/: ChatSkeleton.jsx  ProtectedRoute.jsx
frontend/src/components/chats/: ChatHeader.jsx  ChatInput.jsx  ChatsMessages.jsx  ChatsSidebar.jsx  ProjectChat.jsx  (+1 more)
frontend/src/constants/: model.js
frontend/src/hooks/: useChat.js  useSession.js  useSystemPrompt.js
frontend/src/pages/: Dashboard.jsx  Home.jsx  Login.jsx  NotFound.jsx  ProjectChat.jsx  Register.jsx
src/api/: api.py  router.py
src/api/endpoints/: auth.py
src/core/: config.py  constants.py  secrets.py  supabase_client.py
src/services/: auth_service.py
src/tests/oauth/: oauth_test.html
(+4 files in other folders)
