[project]
name = "chatbot-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "email-validator==2.2.0",
    "fastapi==0.115.12",
    "httpx==0.27.2",
    "jose==1.0.0",
    "pwdlib[argon2]>=0.3.0",
    "pydantic==2.11.5",
    "pydantic-settings==2.9.1",
    "python-dotenv==1.1.0",
    "python-jose==3.5.0",
    "supabase==2.15.2",
    "uvicorn==0.34.0",
]
